--- a/ShopHangHieu/src/main/webapp/templates/banner.xhtml
+++ b/ShopHangHieu/src/main/webapp/templates/banner.xhtml
@@ -18,7 +18,7 @@
                   <h:graphicImage name="#resource['image/banner1.jpg']" />
             </div>
             <div class="carousel-item">
-              <h:graphicImage name="resource/image/banner1.jpg" />
+                <h:graphicImage name="banner1.jpg" library="image"/>
             </div>
             <div class="carousel-item">
               <h:graphicImage name="#resource['image/banner1.jpg']" />
