--- a/WebShopHangHieu/src/main/webapp/templates/banner.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/banner.xhtml
@@ -1,37 +1,199 @@
 
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                 xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <div class="banner-left">
-        <div id="demo" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-         <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
-          </ul>
-
-          <!-- The slideshow -->
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-                <h:graphicImage name="banner1.jpg"  library="image"/>
-            </div>
-            <div class="carousel-item">
-              <h:graphicImage name="banner2.jpg"  library="image"/>
-            </div>
-            <div class="carousel-item">
-              <h:graphicImage name="banner3.jpg"  library="image"/>
-            </div>
-          </div>
-
-          <!-- Left and right controls -->
-          <a class="carousel-control-prev" href="#demo" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-          </a>
-          <a class="carousel-control-next" href="#demo" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-          </a>
+                 xmlns:h="http://xmlns.jcp.org/jsf/html"
+                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                 xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+>
+    <div class="side-bar col-md-3">
+        <div class="search-hotel">
+                <h3 class="agileits-sear-head">Search Here..</h3>
+<!--                <form action="#" method="post">
+                        <input type="search" placeholder="Product name..." name="search" required="">
+                        <input type="submit" value=" ">
+                </form>-->
+<h:form styleClass="form-inline" style="width: 100%">
+                <h:inputText a:placeholder="Product name" styleClass="form-control"></h:inputText>
+                <h:commandLink value="Tim" styleClass="btn btn-info"/>
+            </h:form>
         </div>
-    </div>
+        <!-- price range -->
+        <div class="range">
+                <h3 class="agileits-sear-head">Price range</h3>
+                <ul class="dropdown-menu6">
+                        <li>
+
+                                <div id="slider-range"></div>
+                                <input type="text" id="amount" style="border: 0; color: #ffffff; font-weight: normal;" />
+                        </li>
+                </ul>
+        </div>
+        <!-- //price range -->
+        <!--preference -->
+        <div class="left-side">
+                <h3 class="agileits-sear-head">Occasion</h3>
+                <style>
+                    div.left-side table tr td{
+                        display: block; 
+                        font-size: 1.5vw;
+                    }
+                </style>
+                    <h:form>
+                        <h:selectManyCheckbox >
+                        
+                            <f:selectItems  value="#{brandBean.brand}" var="bra" itemLabel="#{bra.name}" itemValue="#{bra.id}" ></f:selectItems>
+                                
+                        
+                        
+                        </h:selectManyCheckbox>
+                    </h:form>
+                
+        </div>
+        <!-- // preference -->
+        <!-- discounts -->
+<!--        <div class="left-side">
+                <h3 class="agileits-sear-head">Discount</h3>
+                <ul>
+                        <li>
+                                <input type="checkbox" class="checked">
+                                <span class="span">5% or More</span>
+                        </li>
+                        <li>
+                                <input type="checkbox" class="checked">
+                                <span class="span">10% or More</span>
+                        </li>
+                        <li>
+                                <input type="checkbox" class="checked">
+                                <span class="span">20% or More</span>
+                        </li>
+                        <li>
+                                <input type="checkbox" class="checked">
+                                <span class="span">30% or More</span>
+                        </li>
+                        <li>
+                                <input type="checkbox" class="checked">
+                                <span class="span">50% or More</span>
+                        </li>
+                        <li>
+                                <input type="checkbox" class="checked">
+                                <span class="span">60% or More</span>
+                        </li>
+                </ul>
+        </div>-->
+        <!-- //discounts -->
+        <!-- reviews -->
+<!--        <div class="customer-rev left-side">
+                <h3 class="agileits-sear-head">Customer Review</h3>
+                <ul>
+                        <li>
+                                <a href="#">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <span>5.0</span>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="#">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <span>4.0</span>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="#">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <span>3.5</span>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="#">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <span>3.0</span>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="#">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                        <span>2.5</span>
+                                </a>
+                        </li>
+                </ul>
+        </div>-->
+        <!-- //reviews -->
+        <!-- deals -->
+<!--        <div class="deal-leftmk left-side">
+                <h3 class="agileits-sear-head">Special Deals</h3>
+                <div class="special-sec1">
+                        <div class="col-xs-4 img-deals">
+                                <img src="images/s4.jpg" alt="">
+                        </div>
+                        <div class="col-xs-8 img-deal1">
+                                <h3>Shuberry Heels</h3>
+                                <a href="single.html">$180.00</a>
+                        </div>
+                        <div class="clearfix"></div>
+                </div>
+                <div class="special-sec1">
+                        <div class="col-xs-4 img-deals">
+                                <img src="images/s2.jpg" alt="">
+                        </div>
+                        <div class="col-xs-8 img-deal1">
+                                <h3>Chikku Loafers</h3>
+                                <a href="single.html">$99.00</a>
+                        </div>
+                        <div class="clearfix"></div>
+                </div>
+                <div class="special-sec1">
+                        <div class="col-xs-4 img-deals">
+                                <img src="images/s1.jpg" alt="">
+                        </div>
+                        <div class="col-xs-8 img-deal1">
+                                <h3>Bella Toes</h3>
+                                <a href="single.html">$165.00</a>
+                        </div>
+                        <div class="clearfix"></div>
+                </div>
+                <div class="special-sec1">
+                        <div class="col-xs-4 img-deals">
+                                <img src="images/s5.jpg" alt="">
+                        </div>
+                        <div class="col-xs-8 img-deal1">
+                                <h3>Red Bellies</h3>
+                                <a href="single.html">$225.00</a>
+                        </div>
+                        <div class="clearfix"></div>
+                </div>
+                <div class="special-sec1">
+                        <div class="col-xs-4 img-deals">
+                                <img src="images/s3.jpg" alt="">
+                        </div>
+                        <div class="col-xs-8 img-deal1">
+                                <h3>(SRV) Sneakers</h3>
+                                <a href="single.html">$169.00</a>
+                        </div>
+                        <div class="clearfix"></div>
+                </div>
+        </div>-->
+        <!-- //deals -->
+
+</div>
 </ui:composition>
