--- a/WebShopHangHieu/src/main/webapp/templates/Header.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/Header.xhtml
@@ -2,51 +2,72 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    <header id="myheader">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
-                    <a class="navbar-brand" href="index.html">LOGO</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
+    <div class="banner_top innerpage" id="home">
+            <div class="wrapper_top_w3layouts">
+                    <div class="header_agileits">
+                        <div class="logo inner_page_log">
+                                <h1><a class="navbar-brand" href="index.html">
+                                        <span>Downy</span> <i>Shoes</i></a></h1>
+                        </div>
+                        <div class="overlay overlay-contentpush">
+                                <button type="button" class="overlay-close"><i class="fa fa-times" aria-hidden="true"></i></button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item ">
-                    <a class="nav-link active" href="#">Trang Chủ <span class="sr-only">(current)</span></a>
-                  </li>
+                                <nav>
+                                        <ul>
+                                            <li><h:link value="Home"></h:link></li>
+                                            <li><h:link value="Shop"></h:link></li>
+                                            <li><h:link value="Contact"></h:link></li>
+                                        </ul>
+                                </nav>
+                        </div>
+                        <div class="mobile-nav-button">
+                            <button id="trigger-overlay" type="button"><i class="fa fa-bars" aria-hidden="true"></i></button>
+                                
+                        </div>
+                        <!-- cart details -->
+                        <div class="top_nav_right">
+                                <div class="shoecart shoecart2 cart cart box_1">
+<!--                                            <form action="#" method="post" class="last">
+                                                <input type="hidden" name="cmd" value="_cart">
+                                                <input type="hidden" name="display" value="1">
+                                                <button class="top_shoe_cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
+                                        </form>-->
+                                </div>
+                        </div>
+                    </div>
+            </div>
+            <!-- //cart details -->
+            <!-- search -->
+            <div class="search_w3ls_agileinfo">
+                    <div class="cd-main-header">
+                            <ul class="cd-header-buttons">
+                                    <li><a class="cd-search-trigger" href="#cd-search"> <span></span></a></li>
+                            </ul>
+                    </div>
+                    <div id="cd-search" class="cd-search">
+<!--                            <form action="#" method="post">
+                                    <input name="Search" type="search" placeholder="Click enter after typing...">
+                            </form>-->
+                        <h:form>
+                            <h:inputText />
+                        </h:form>
+                    </div>
+            </div>
+            <!-- //search -->
+            <div class="clearfix"></div>
+            <!-- /banner_inner -->
+            <div class="services-breadcrumb_w3ls_agileinfo">
+                    <div class="inner_breadcrumb_agileits_w3">
 
-                  <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Danh mục
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      
-                        <c:forEach var="cate" items="#{cateBean.category}">
-                            <a class="dropdown-item" href="product?cate_id=#{cate.id}">#{cate.name}</a>
-                      </c:forEach>
-                      
+                            <ul class="short">
+                                    <li><a href="index.html">Home</a><i>|</i></li>
+                                    <li>Shop</li>
+                            </ul>
                     </div>
-                  </li>
-                    <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Thương Hiệu
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="product.html">Thương Hiệu</a>
-                      <a class="dropdown-item" href="product.html">Thương Hiệu</a>
-                      
-                    </div>
-                  </li>
-                  <li class="nav-item">
-                    <a href="#" class="nav-link" data-toggle="modal" data-target="#myModal"> Liên Hệ</a>
-                  </li>
-                </ul>               
-                <h:form class="form-inline my-2 my-lg-0">
-                    <h:inputText class="form-control mr-sm-2" />
-                    <h:button value="Tim kiem" class="btn btn-outline-success my-2 my-sm-0"/>
-                </h:form>
-              </div>
-            </nav>	
-    </header>
+            </div>
+		<!-- //banner_inner -->
+	</div>
+    <!--<a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>-->
 </ui:composition>
