--- a/WebShopHangHieu/src/main/webapp/templates/Footer.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/Footer.xhtml
@@ -1,4 +1,53 @@
 
-<ui:composition  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    
-</ui:composition>
+<ui:composition  xmlns="http://www.w3.org/1999/xhtml"
+                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                 xmlns:h="http://xmlns.jcp.org/jsf/html"
+                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                 xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+<footer>
+		<div class="footer">
+			<div class="address">
+				<div>
+					<h4><b>Địa chỉ:</b> abc-xyz-tp.hcm</h4>
+					<h4><b>Thời gian làm việc:</b> </h4>
+					<ul>
+						<li>T2 đến T7: 8h30-20h30</li>
+						<li>CN nghỉ</li>
+					</ul>
+				</div>
+			</div>
+			<div class="telephone">
+				<div>
+					<h4><b>Số điện thoại</b></h4>
+					<ul>
+						<li>0123456789</li>
+						<li>0123456789</li>
+						<li>0123456789</li>
+						<li>0123456789</li>
+					</ul>
+				</div>
+			</div>
+			<div class="contact">
+                            <h:form>
+				<h4>Liên hệ chúng tôi:</h4>
+				<div class="name"> 
+                                    
+					<div>
+                                            <h:inputText valueChangeListener="Nhap ho ten"></h:inputText>
+					</div>
+					<div>
+						<h:inputText valueChangeListener="Nhap email"></h:inputText>
+					</div>
+				</div>
+				<div class="content">
+                                    <h:inputTextarea></h:inputTextarea>
+				</div>
+				<div class="submit-btn">
+                                    <h:commandButton value="gui"></h:commandButton>
+				</div>
+                            </h:form>
+			</div>
+		</div>
+	</footer>
+    </ui:composition>
