--- a/WebShopHangHieu/src/main/webapp/templates/Header.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/Header.xhtml
@@ -4,70 +4,130 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    <div class="banner_top innerpage" id="home">
-            <div class="wrapper_top_w3layouts">
-                    <div class="header_agileits">
-                        <div class="logo inner_page_log">
-                                <h1><a class="navbar-brand" href="index.html">
-                                        <span>Downy</span> <i>Shoes</i></a></h1>
+    <header>
+        <nav class="navbar navbar-expand-sm sticky-top ">
+            <h:link value="Hang Hieu" styleClass="navbar-brand logo"></h:link>
+            <button class="navbar-toggler btn btn-primary" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <h:link styleClass="nav-link text-light" value="Home" style="font-size: 22px; margin: 20px;"
+                              includeViewParams="true"
+                                       outcome="index.xhtml?faces-redirect=true"></h:link>
+                  </li>
+                  <li class="nav-item">
+                    <h:link styleClass="nav-link text-light" value="Shop" style="font-size: 22px; margin: 20px;"
+                            includeViewParams="true"
+                                       outcome="Products?faces-redirect=true"></h:link>
+                  </li>
+                  <li class="nav-item">
+                   <h:link styleClass="nav-link text-light" value="Contact" style="font-size: 22px; margin: 20px;"></h:link>
+                  </li>    
+                </ul>
+                
+            </div>  
+            <h:form class="form-inline my-2 my-lg-0">
+                <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+                    <h:inputText styleClass="form-control mr-sm-2">
+                        
+                    </h:inputText>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm Kiếm</button>
+            </h:form>
+        </nav>
+        <div class="links-pro">
+            <c:if test="#{facesContext.viewRoot.viewId=='/Products.xhtml'}">
+                <ul>
+                    <li>Home</li>
+                    <li>Shop</li>
+                </ul>
+                </c:if>
+        </div>
+        <div class="dv-login">
+            <c:if test="#{facesContext.externalContext.sessionMap.get('user')==null}" >
+                <h:link styleClass="btn btn-outline-warning" value="Dang nhap" 
+                              includeViewParams="true"
+                                       outcome="Login.xhtml?faces-redirect=true"></h:link>
+                <h:link styleClass="btn btn-outline-info" value="Dang ky" 
+                              includeViewParams="true"
+                                       outcome="Register.xhtml?faces-redirect=true"></h:link>
+            </c:if>
+            <c:if test="#{facesContext.externalContext.sessionMap.get('user')!=null}">
+                <h:link styleClass="btn btn-outline-warning" 
+                        value="#{facesContext.externalContext.sessionMap.get('user').fullname}" 
+                              ></h:link>
+                
+                <h:form>
+                    <h:commandLink styleClass="btn btn-outline-info" value="Logout"
+                                   action="#{userBean.logout()}"
+                                   ></h:commandLink>
+                </h:form>
+                </c:if>
+               
+        </div>
+        <div class=" cart dropdown">
+            <button class="btn cart-btn dropdown-toggle"
+                    aria-haspopup="true" aria-expanded="false" data-toggle="dropdown">
+                <i class="fas fa-shopping-cart" ></i></button>
+                <div class="dropdown-menu" style="width: 500px;">
+                <h:form>
+                    <c:if test="#{facesContext.externalContext.sessionMap.get('cart')!=null}">
+                        <!--<c:if test="#{cartBean.carts==null}">-->
+                        <h:dataTable var="cart" value="#{cartBean.carts}" styleClass="table table-striped" style="font-family: Times New Roman;">
+                            <h:column>
+                                <f:facet name="header">ID</f:facet>
+                                #{cart['proid']}
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">Name</f:facet>
+                                #{cart['proName']}
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">count</f:facet>
+                                #{cart['count']}
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">price</f:facet>
+                                #{cart['proprice']}
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">Total</f:facet>
+                                #{cart['proprice']*cart['count']}
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">Delete</f:facet>
+                                <h:commandButton value="x" styleClass="btn btn-outline-success">
+                                    <f:ajax listener="#{cartBean.deleteCart(cart['proid'])}"></f:ajax>
+                                </h:commandButton>
+                            </h:column>
+                            
+                        </h:dataTable>
+                        <div style="text-align: center">
+                            <h3>Subtotal: ${cartBean.subtotal}</h3>
+                            <h:link styleClass="btn btn-outline-warning" value="CHECK OUT" style="font-size: 22px; margin: 20px;"
+                              includeViewParams="true"
+                                       outcome="CheckOut.xhtml?faces-redirect=true"></h:link>
                         </div>
-                        <div class="overlay overlay-contentpush">
-                                <button type="button" class="overlay-close"><i class="fa fa-times" aria-hidden="true"></i></button>
-
-                                <nav>
-                                        <ul>
-                                            <li><h:link value="Home"></h:link></li>
-                                            <li><h:link value="Shop"></h:link></li>
-                                            <li><h:link value="Contact"></h:link></li>
-                                        </ul>
-                                </nav>
-                        </div>
-                        <div class="mobile-nav-button">
-                            <button id="trigger-overlay" type="button"><i class="fa fa-bars" aria-hidden="true"></i></button>
-                                
-                        </div>
-                        <!-- cart details -->
-                        <div class="top_nav_right">
-                                <div class="shoecart shoecart2 cart cart box_1">
-<!--                                            <form action="#" method="post" class="last">
-                                                <input type="hidden" name="cmd" value="_cart">
-                                                <input type="hidden" name="display" value="1">
-                                                <button class="top_shoe_cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-                                        </form>-->
-                                </div>
-                        </div>
-                    </div>
+                            
+                    </c:if>
+<!--                    <c:if test="#{facesContext.externalContext.sessionMap.get('cart').value==null}">
+                        <h:outputText value="Your shopping cart is empty" style="padding: 10px;color: red;" styleClass="text-center"/>
+                    </c:if>-->
+                </h:form>
             </div>
-            <!-- //cart details -->
-            <!-- search -->
-            <div class="search_w3ls_agileinfo">
-                    <div class="cd-main-header">
-                            <ul class="cd-header-buttons">
-                                    <li><a class="cd-search-trigger" href="#cd-search"> <span></span></a></li>
-                            </ul>
-                    </div>
-                    <div id="cd-search" class="cd-search">
-<!--                            <form action="#" method="post">
-                                    <input name="Search" type="search" placeholder="Click enter after typing...">
-                            </form>-->
-                        <h:form>
-                            <h:inputText />
-                        </h:form>
-                    </div>
-            </div>
-            <!-- //search -->
-            <div class="clearfix"></div>
-            <!-- /banner_inner -->
-            <div class="services-breadcrumb_w3ls_agileinfo">
-                    <div class="inner_breadcrumb_agileits_w3">
-
-                            <ul class="short">
-                                    <li><a href="index.html">Home</a><i>|</i></li>
-                                    <li>Shop</li>
-                            </ul>
-                    </div>
-            </div>
-		<!-- //banner_inner -->
-	</div>
-    <!--<a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>-->
+        </div>
+        
+    </header>
+    <script>
+        $(document).ready(function(){
+            $("#hide").click(function(){
+              $("p").hide();
+            });
+            $("#show").click(function(){
+              $("p").show();
+            });
+        });
+     </script>
 </ui:composition>
