--- a/WebShopHangHieu/src/main/webapp/templates/ListItem.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/ListItem.xhtml
@@ -5,90 +5,98 @@
                  xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
-    <div class="left-ads-display col-md-9">
-        <div class="wrapper_top_shop">
-<!--                <div class="col-md-6 shop_left">
-                        <img src="images/banner3.jpg" alt="">
-                        <h6>40% off</h6>
-                </div>
-                <div class="col-md-6 shop_right">
-                        <img src="images/banner2.jpg" alt="">
-                        <h6>50% off</h6>
-                </div>-->
-                <div class="clearfix"></div>
-                <!-- product-sec1 -->
-                <div class="product-sec1" style="display: flex; flex-wrap: wrap">
-                <c:forEach var="pro" items="${productBean.product}">
-                    
-                        <!--/mens-->
-                        <div class="col-md-4 product-men">
-                                <div class="product-shoe-info shoe">
-                                        <div class="men-pro-item">
-                                                <div class="men-thumb-item">
-                                                    <h:graphicImage name="upload/#{pro.image}" library="image" style="height: 300px; width: 300px;"/>
-                                                        <div class="men-cart-pro">
-                                                                <div class="inner-men-cart-pro">
-                                                                        <a href="single.html" class="link-product-add-cart">Quick View</a>
-                                                                        <h:link styleClass="link-product-add-cart" value="View"/>
-                                                                </div>
-                                                        </div>  
-                                                        <span class="product-new-top">New</span>
-                                                </div>
-                                                <div class="item-info-product">
-                                                        <h4>
-                                                            <h:link value="#{pro.name}"/>
-                                                        </h4>
-                                                        <div class="info-product-price">
-                                                                <div class="grid_meta">
-                                                                        <div class="product_price">
-                                                                                <div class="grid-price ">
-                                                                                    <span class="money ">#{pro.price}</span>
-                                                                                </div>
-                                                                        </div>
-                                                                        <ul class="stars">
-                                                                                <li><a href="#"><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                                                                                <li><a href="#"><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                                                                                <li><a href="#"><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                                                                                <li><a href="#"><i class="fa fa-star-half-o" aria-hidden="true"></i></a></li>
-                                                                                <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-                                                                        </ul>
-                                                                </div>
-<!--                                                                <div class="shoe single-item hvr-outline-out">
-                                                                        <form action="#" method="post">
-                                                                                <input type="hidden" name="cmd" value="_cart">
-                                                                                <input type="hidden" name="add" value="1">
-                                                                                <input type="hidden" name="shoe_item" value="Bella Toes">
-                                                                                <input type="hidden" name="amount" value="675.00">
-                                                                                <button type="submit" class="shoe-cart pshoe-cart"><i class="fa fa-cart-plus" aria-hidden="true"></i></button>
-
-                                                                                <a href="#" data-toggle="modal" data-target="#myModal1"></a>
-                                                                                <h:link />
-                                                                        </form>
-
-                                                                </div>-->
-                                                        </div>
-                                                        <div class="clearfix"></div>
-                                                </div>
-                                        </div>
+    <div class="grids_bottom">
+        <div class="style-grids">
+               
+                        <!--<img src="images/b1.jpg" alt="shoe">-->
+                    <h:graphicImage name="b1.jpg" library="image"></h:graphicImage>
+               
+        </div>
+        <div class="style-grid">
+                <div class="style-image-1">
+                        <div class="text">
+                                <h3>Nike DOWNSHIFTER</h3>
+                                <p style="padding-left: 50px; ">Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias consequatur.sed quia non numquam eius modi
+                                        tempora incidunt ut labore et dolore .</p>
+                                <div class="shop-button">
+                                        <!--<a href="shop.html">Shop Now</a>-->
+                                        <h:link value="Shop Now" styleClass="btn btn-dark" includeViewParams="true"
+                                       outcome="Products?faces-redirect=true"></h:link>
                                 </div>
                         </div>
-
-                        <!-- //mens -->
-                        <div class="clearfix"></div>
-
-                
-                </c:forEach>
-</div>
-                <!-- //product-sec1 -->
-<!--                <div class="col-md-6 shop_left shp">
-                        <img src="images/banner4.jpg" alt="">
-                        <h6>21% off</h6>
                 </div>
-                <div class="col-md-6 shop_right shp">
-                        <img src="images/banner1.jpg" alt="">
-                        <h6>31% off</h6>
-                </div>-->
-                <div class="clearfix"></div>
+                <div class="style-image-2">
+                        <!--<img src="images/b2.jpg" alt="shoe">-->
+                    <h:graphicImage name="b2.jpg" library="image"></h:graphicImage>
+                    <div class="text-2">
+                            <h3>Air force</h3>
+                    </div>
+                </div>
+        </div>
+        
+    </div>
+    <div class="grids_bottom">
+        <div class="style-grids">
+            <div class="style-image-1">
+                <div class="text">
+                    <h3>Sneakers</h3>
+                    <p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias consequatur.sed quia non numquam eius modi
+                            tempora incidunt ut labore .</p>
+                    <div class="shop-button">
+                         <h:link value="Shop Now" styleClass="btn btn-dark" includeViewParams="true"
+                                       outcome="Products?faces-redirect=true"></h:link>
+                    </div>
+                 </div> 
+            </div>
+        
+        
+            <div class="style-image-2">
+                   <h:graphicImage name="b4.jpg" library="image"></h:graphicImage>
+
+                    <div class="text-2">
+                            <h3>Air force</h3>
+                    </div>
+            </div>
+        </div>
+
+        <div class="style-grids">
+            <div class="style-image-2">
+                    <h:graphicImage name="b3.jpg" library="image"></h:graphicImage>
+                    <div class="text-2">
+                            <h3>Air force</h3>
+                    </div>
+            </div>
+            <div class="style-image-3">
+                    <div class="text">
+                        <h3>Sneakers</h3>
+                        <p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias consequatur.sed quia non numquam eius modi
+                                tempora incidunt ut labore .</p>
+                        <div class="shop-button-two">
+                                <h:link value="Shop Now" styleClass="btn btn-danger"
+                                        includeViewParams="true"
+                                       outcome="Products?faces-redirect=true"></h:link>
+                        </div>
+                    </div>
+            </div>
         </div>
     </div>
+    <div style="width: 100%;margin: 0px auto;">
+        <div class="owl-carousel owl-theme">
+            <c:forEach var="pro" items="#{productBean.product}">
+                <div class="item">
+                    <div class="img-pro">
+                        <h:graphicImage name="upload/#{pro.image}" library="image" style="width: 100%; height: 300px;"/>
+                    </div>
+                    <div class="name-pro">
+                        <h3>${pro.name}</h3>
+                    </div>
+                </div>
+            </c:forEach>
+            
+        </div>
+    </div>
+<!--    <div class="owl-nav">
+        <div class="owl-prev">prev</div>
+        <div class="owl-next">next</div>
+    </div>-->
 </ui:composition>
