--- a/WebShopHangHieu/src/main/webapp/templates/base.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/base.xhtml
@@ -28,6 +28,10 @@
        <h:outputStylesheet name="Shop.css" library="CSS"/>
       <h:outputScript name="HeaderJS.js" library="js"/>
       <h:outputScript name="OwlCarosel.js" library="js"/>
+      <h:outputScript name="zoomjavascript.js" library="js"/>
+      <h:outputStylesheet name="productdetail.css" library="CSS"/>
+      
+         
     </h:head>
     <h:body>
         <ui:insert name="Header">
