--- a/WebShopHangHieu/src/main/webapp/resources/CSS/ListItemStyle.css
+++ b/WebShopHangHieu/src/main/webapp/resources/CSS/ListItemStyle.css
@@ -52,3 +52,25 @@ div.style-image-3{
      background-color: black;
      color: white;
 }
+ol {
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+.flex-control-nav {
+  width: 100%;
+  position: absolute;
+  bottom: -40px;
+  text-align: center;
+}
+.flex-control-nav li {
+  margin: 0 6px;
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+}
