--- a/WebShopHangHieu/src/main/webapp/templates/ListItem.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/ListItem.xhtml
@@ -85,7 +85,57 @@
             <c:forEach var="pro" items="#{productBean.product}">
                 <div class="item">
                     <div class="img-pro">
-                        <h:graphicImage name="upload/#{pro.image}" library="image" style="width: 100%; height: 300px;"/>
+<!--                        <h:graphicImage name="upload/#{pro.image}" library="image" style="width: 100%; height: 300px;"/>-->
+<!--                        <div class="col-md-3 product-men women_two">-->
+					<div class="product-shoe-info shoe">
+						<div class="men-pro-item">
+							<div class="men-thumb-item">
+                                                             <h:graphicImage library="image" name="s7.jpg"/>
+<!--								<img src="images/s4.jpg" alt="">-->
+								<div class="men-cart-pro">
+									<div class="inner-men-cart-pro">
+										<a href="single.html" class="link-product-add-cart">Quick View</a>
+									</div>
+								</div>
+								<span class="product-new-top">New</span>
+							</div>
+							<div class="item-info-product">
+								<h4>
+									<a href="single.html">Shuberry Heels </a>
+								</h4>
+								<div class="info-product-price">
+									<div class="grid_meta">
+										<div class="product_price">
+											<div class="grid-price ">
+												<span class="money ">$575.00</span>
+											</div>
+										</div>
+										<ul class="stars">
+											<li><a href="#"><i class="fa fa-star" aria-hidden="true"></i></a></li>
+											<li><a href="#"><i class="fa fa-star" aria-hidden="true"></i></a></li>
+											<li><a href="#"><i class="fa fa-star" aria-hidden="true"></i></a></li>
+											<li><a href="#"><i class="fa fa-star" aria-hidden="true"></i></a></li>
+											<li><a href="#"><i class="fa fa-star-half-o" aria-hidden="true"></i></a></li>
+										</ul>
+									</div>
+									<div class="shoe single-item hvr-outline-out">
+										<h:form >
+                                                                                    <h:inputHidden value="_cart"></h:inputHidden>
+                                                                                    <h:inputHidden value="1"></h:inputHidden>
+                                                                                    <h:inputHidden value="Shuberry Heels"></h:inputHidden>
+                                                                                    <h:inputHidden  value="575.00"></h:inputHidden>
+<!--											<button type="submit" class="shoe-cart pshoe-cart"><i class="fa fa-cart-plus" aria-hidden="true"></i></button>-->
+
+<!--											<a href="#" data-toggle="modal" data-target="#myModal1"></a>-->
+										</h:form>
+
+									</div>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+						</div>
+					</div>
+				<!--</div>-->
                     </div>
                     <div class="name-pro">
                         <h3>${pro.name}</h3>
