--- a/WebShopHangHieu/src/main/webapp/templates/base.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/base.xhtml
@@ -30,7 +30,7 @@
       <h:outputScript name="OwlCarosel.js" library="js"/>
       <h:outputScript name="zoomjavascript.js" library="js"/>
       <h:outputStylesheet name="productdetail.css" library="CSS"/>
-      
+      <h:outputScript name="Shop.js" library="js"/>
          
     </h:head>
     <h:body>
