--- a/WebShopHangHieu/src/main/webapp/templates/Footer.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/Footer.xhtml
@@ -9,7 +9,7 @@
 		<div class="footer">
 			<div class="address">
 				<div>
-					<h4><b>Địa chỉ:</b> abc-xyz-tp.hcm</h4>
+					<h4><b>Địa chỉ:</b> The Emporium Tower, 184 Lê Đại Hành, Phường 15, Quận 11, Hồ Chí Minh</h4>
 					<h4><b>Thời gian làm việc:</b> </h4>
 					<ul>
 						<li>T2 đến T7: 8h30-20h30</li>
