Update user login admin

--- a/WebShopHangHieu/src/main/webapp/templates/AdminMenu.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/AdminMenu.xhtml
@@ -26,7 +26,8 @@
                 </li>
                 <li>
                         <h:link  value="Order" 
-                                       ></h:link>
+                                    includeViewParams="true"
+                                       outcome="AdminOrder.xhtml?faces-redirect=true"   ></h:link>
                     <!--AdminOrder.xhtml?faces-redirect=true-->
                 </li>
                 <li>
